new partner grid

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -16,16 +16,42 @@ body.home
 				h1 Collaborating Laboratories by Institution
 			.container
 				.partners-grid
-					a.partner-link(href="https://www.cmu.edu/dietrich/psychology/caoslab/")
+					.partner-wrapper
 						img.partner-img(src="img/partners/cmu_color.png", width="500", height="490", alt="Carnegie Mellon University")
-					a.partner-link(href="http://tbm.urmc.edu")
+						.partner-meta
+							.partner
+								a.partner-name(href="https://scholar.google.com/citations?user=jA6kkvgAAAAJ&hl=en") Bradford Z. Mahon, PhD
+								a.partner-title(href="https://www.cmu.edu/dietrich/psychology/caoslab/neuroscience.html") Concepts, Actions, Objects Lab
+							.partner
+								a.partner-name(href="https://scholar.google.com/citations?user=DEpnUW8AAAAJ&hl=en") N. Bonnie Nozari, MD, PhD
+								a.partner-title(href="http://nazbanou.net/") Language Production and Executive Control Lab
+					.partner-wrapper
 						img.partner-img(src="img/partners/urmc_color.png", width="500", height="490", alt="University of Rochester Medical School")
-					a.partner-link(href="http://proactionlab.fpce.uc.pt/")
+						.partner-meta
+							.partner
+								a.partner-name(href="https://www.urmc.rochester.edu/people/20554798-webster-h-pilcher") Webster Pilcher, MD, PhD
+								a.partner-title(href="https://www.urmc.rochester.edu/del-monte-neuroscience/translational-brain-mapping.aspx") Program for Translational Brain Mapping
+							.partner
+								a.partner-name(href="https://www.urmc.rochester.edu/people/28451778-bogachan-sahin") Bogachan Sahin, MD, PhD
+								a.partner-title(href="https://www.urmc.rochester.edu/del-monte-neuroscience/translational-brain-mapping.aspx") Program for Translational Brain Mapping
+					.partner-wrapper
 						img.partner-img(src="img/partners/uc_color.png", width="500", height="490", alt="University of Coimbra")
-					a.partner-link(href="")
+						.partner-meta
+							.partner
+								a.partner-name(href="https://scholar.google.com/citations?user=ejJVE0wAAAAJ&hl=en") Jorge Almeida, PhD
+								a.partner-title(href="http://proactionlab.fpce.uc.pt/") Concepts, Actions, Objects Lab
+					.partner-wrapper
 						img.partner-img(src="img/partners/beijing_color.png", width="500", height="490", alt="Beijing Normal University")
-					a.partner-link(href="https://cogneuro.psychology.fas.harvard.edu/")
+						.partner-meta
+							.partner
+								a.partner-name(href="https://scholar.google.com/citations?user=bLz-hogAAAAJ&hl=en") Yanchao Bi, PhD
+								a.partner-title(href="http://bilab.bnu.edu.cn/") Concept Lab
+					.partner-wrapper
 						img.partner-img(src="img/partners/harvard_color.png", width="500", height="490", alt="Harvard University")
+						.partner-meta
+							.partner
+								a.partner-name(href="https://scholar.google.com/citations?user=hvvrK8cAAAAJ&hl=en") Alfonso Caramazza
+								a.partner-title(href="https://cogneuro.psychology.fas.harvard.edu/") Cognitive Neuropsychology Lab
 		section.videos-section
 			.container
 				h1 Featured Videos
