--- a/src/jade/_partials/_head.jade
+++ b/src/jade/_partials/_head.jade
@@ -13,6 +13,7 @@ mixin head(pageTitle, pageDescription)
 			- else
 				meta(name="description", content=pageDescription)
 			link(href="../_css/style.min.css", rel="stylesheet")
+			link(href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700&display=swap",rel="stylesheet")
 			link(rel="apple-touch-icon", sizes="180x180", href="../_img/apple-touch-icon.png")
 			link(rel="icon", type="image/png", sizes="32x32", href="../_img/favicon-32x32.png")
 			link(rel="icon", type="image/png", sizes="16x16", href="../_img/favicon-16x16.png")
