--- a/src/jade/_partials/_nav.jade
+++ b/src/jade/_partials/_nav.jade
@@ -52,21 +52,12 @@ mixin nav()
 										span University of Pittsburgh Neurosurgery
 										+icon("external")
 					.secondary-nav-items
-						li.nav-item.nav-group.scientific-products-group
-							.nav-link.main-nav-link
-								span Scientific Products
-								+icon("rarr")
-								+icon("dchev") 
-							ul.nav-subgroup
-								li.nav-item
-									a.nav-link(href="/publications") 
-										span Publications
-								li.nav-item
-									a.nav-link(href="/technology") 
-										span Technology
-						li.nav-item.nav-group.data-consortium-group
-							a.nav-link.main-nav-link(href="/data-consortium") 
-								span Data Consortium
+						li.nav-item.nav-group.publications-group
+							a.nav-link.main-nav-link(href="/publications") 
+								span Publications
+						li.nav-item.nav-group.consortium-group
+							a.nav-link.main-nav-link(href="/consortium") 
+								span Consortium
 						li.nav-item.nav-group.in-the-news-group
 							a.nav-link.main-nav-link(href="/in-the-news") 
 								span In the News
