--- a/src/jade/_partials/_svg.jade
+++ b/src/jade/_partials/_svg.jade
@@ -1,5 +1,9 @@
 mixin svg()
 	svg(style="display: none", xmlns="http://www.w3.org/2000/svg")
+		symbol#cycle-uarr(viewbox="0 0 20 20")
+			path(d="M10 18 L10 2 M7 5.5 L10 2 L13 5.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round", stroke-linejoin="round")
+		symbol#cycle-darr(viewbox="0 0 20 20")
+			path(d="M2 4 L 7 4 C7 4 13 4 13 10 M 13 10 L13 18 M16 14.5 L13 18 L10 14.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round", stroke-linejoin="round")
 		symbol#menu(viewbox="0 0 6 6")
 			path(d="M1 1.5 L5 1.5 M1 3 L5 3 M1 4.5 L5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#filter(viewbox="0 0 6 6")
