--- a/src/jade/in-the-news/index.jade
+++ b/src/jade/in-the-news/index.jade
@@ -13,11 +13,10 @@ body.in-the-news-page
 	main.page-content
 		section
 			.container
-				h3 New Research
+				h3 Vision recovery after stroke affecting visual cortext
 				:marked
-					* [URMC: New Study Reshapes Understanding of How the Brain Recovers from Injury](https://www.urmc.rochester.edu/news/story/5519/new-study-reshapes-understanding-of-how-the-brain-recovers-from-injury.aspx)
-				h3 Preserving Dan's Music Abilities
-				p Learn about Dan, a musician and music teacher, who went through our the Translational Brain Mapping Program to remove his tumor while preserving his music abilities.
+					* [New Study Reshapes Understanding of How the Brain Recovers from Injury](https://www.urmc.rochester.edu/news/story/5519/new-study-reshapes-understanding-of-how-the-brain-recovers-from-injury.aspx)
+				h3 A new technique for localizing music in the brain during brain surgery
 				:marked
 					* [URMC: A patient plays his saxophone during brain surgery](http://www.urmc.rochester.edu/neurosurgery/news.aspx?start=01-01-2017&amp;end=12-31-2017#newsItem2196)
 					* [NPR Health: This music teacher played his saxophone while in brain surgery](http://www.npr.org/sections/health-shots/2017/08/25/545710598/this-music-teacher-played-his-saxophone-while-in-brain-surgery)
@@ -27,15 +26,15 @@ body.in-the-news-page
 					* [NBC Health News: Musician plays sax during brain tumor surgery](http://www.nbcnews.com/health/health-news/musician-plays-sax-during-brain-tumor-surgery-n796971)
 					* [New Atlas: Mid-surgery sax solo sounds success for retaining musical ability](http://newatlas.com/patient-plays-saxophone-brain-surgery/51094/)
 				h3 Predicting Vision Recovery After Brain Tumor Removal
-				p Understanding vision's recovery process could have implications for many different injuries of the central nervous system.
 				:marked
 					* [URMC: New imaging technique helps predict how vision recovers after brain tumor removal](http://www.rochester.edu/newscenter/myelin-linked-to-speedy-recovery-of-human-visual-system-after-tumor-removal-82512/)
 					* [Futurity: Images show how brain heals itself after tumor](http://www.futurity.org/pituitary-brain-tumor-vision-817882/)
+				h3 From a stroke to a PhD in 12 years
+				:marked
 					* [WHEC News 10: Greece native defends thesis in cognitive neuroscience 12 years after aneurysm](http://www.whec.com/news/university-of-rochester-medical-center-student-research-scientist/4559749/)
 					* [URMC: Surviving a stroke propels career in brain research](https://www.urmc.rochester.edu/news/story/5107/surviving-a-stroke-propels-career-in-brain-research.aspx)
 					* [URMC: Student work opens the brain to help surgeons remove tumors](http://www.rochester.edu/newscenter/student-work-opens-brain-surgeons-remove-tumors-262152/)
-				h3 Resident and Former SMD Student Wins Cadbury Award
-				p Neurosurgery Resident and Former SMD Student David Paul (M.D. ’16) Wins National Cadbury Award for Academic and Volunteer Achievements.
+				h3 URMC neurosurgery resident wins Cadbury Award
 				:marked
-					* [Pilot research offers new insights about how the brain fixes itself](https://www.urmc.rochester.edu/news/story/4450/smd-student-david-paul-m.d.-16-wins-national-cadbury-award--for-academic-and-volunteer-achievements.aspx)
+					* [Neurosurgery Resident and Former SMD Student David Paul (M.D. ’16) Wins National Cadbury Award for Academic and Volunteer Achievements](https://www.urmc.rochester.edu/news/story/4450/smd-student-david-paul-m.d.-16-wins-national-cadbury-award--for-academic-and-volunteer-achievements.aspx)
 	+footer()
