--- a/src/jade/publications/index.jade
+++ b/src/jade/publications/index.jade
@@ -5,7 +5,7 @@ include ../_partials/_icon
 include ../_partials/_footer
 
 +head("Publications")
-body.scientific-products-page.publications-page
+body.publications-page
 	+header()
 	main
 		section.page-hero
