--- a/src/jade/resources-for-patients/index.jade
+++ b/src/jade/resources-for-patients/index.jade
@@ -12,5 +12,32 @@ body.care-page.resources-for-patients-page
 				h1 Resources for Patients
 	main.page-content
 		section
-			.container
+			.container.resources-for-patients-list
+				.column
+					h3 Brain Tumors
+					:marked
+						* Head for the Cure
+						* [Brains for the Cure](https://www.brainsforthecure.org/wp-content/uploads/2019/06/Partner-Package-Combined.pdf)
+						* [National Brain Tumor Society](https://braintumor.org/)
+						* [American Brain Tumor Association ](https://www.abta.org/about-brain-tumors/)
+						* [International Brain Tumor Alliance ](https://theibta.org/)
+						* Society for Neuro-Oncology 
+				.column
+					h3 Stroke
+					:marked
+						* [National Stroke Association](https://www.stroke.org/understand-stroke/what-is-stroke/)
+						* [Mayo Clinic](https://www.mayoclinic.org/diseases-conditions/stroke/symptoms-causes/syc-20350113)
+						* [American Stroke Association](https://www.strokeassociation.org/en/about-stroke)
+						* [The Internet Stroke Center](http://www.strokecenter.org/patients/about-stroke/what-is-a-stroke/)
+						* [NINDS Stroke ](https://www.ninds.nih.gov/Disorders/All-Disorders/Stroke-Information-Page)
+						* [CDC Stroke](https://www.cdc.gov/stroke/educational_materials.htm)
+				.column
+					h3 TBI
+					:marked
+						* [Mayo Clinic](https://www.mayoclinic.org/diseases-conditions/traumatic-brain-injury/symptoms-causes/syc-20378557)
+						* [CDC](https://www.cdc.gov/traumaticbraininjury/index.html)
+						* [NINDS](https://www.ninds.nih.gov/disorders/All-disorders/traumatic-brain-injury-information-page)
+						* [AANS](https://www.aans.org/en/Patients/Neurosurgical-Conditions-and-Treatments/Traumatic-Brain-Injury)
+						* [Brain Injury Association of America](https://www.biausa.org/)
+
 	+footer()
