--- a/src/jade/consortium/index.jade
+++ b/src/jade/consortium/index.jade
@@ -10,10 +10,10 @@ body.consortium-page
 	section.page-hero
 		.container
 			h1 Consortium
+			p Collaborating Laboratories by Institution
 	main.page-content
 		section.partners-section
 			.container
-				h1 Collaborating Laboratories by Institution
 				.partners-grid
 					.partner-wrapper
 						img.partner-img(src="../_img/partners/cmu_color.png", width="500", height="490", alt="Carnegie Mellon University")
