--- a/src/jade/resources-for-patients/index.jade
+++ b/src/jade/resources-for-patients/index.jade
@@ -32,7 +32,7 @@ body.care-page.resources-for-patients-page
 						* [NINDS Stroke ](https://www.ninds.nih.gov/Disorders/All-Disorders/Stroke-Information-Page)
 						* [CDC Stroke](https://www.cdc.gov/stroke/educational_materials.htm)
 				.column
-					h3 TBI
+					h3 Traumatic Brain Injury
 					:marked
 						* [Mayo Clinic](https://www.mayoclinic.org/diseases-conditions/traumatic-brain-injury/symptoms-causes/syc-20378557)
 						* [CDC](https://www.cdc.gov/traumaticbraininjury/index.html)
